[package]
name = "crosslog"
version = "0.1.0"
authors = ["Deathaclops <deathaclops@gmail.com>"]
description = "A library for logging and printing on both native platforms and WebAssembly."
edition = "2021"

[dependencies]
log = "0.4.22"

[target.wasm32-unknown-unknown.dependencies]
wasm-logger = "0.2.0"
web-sys = "0.3.70"
wasm-bindgen = "0.2.93"

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
env_logger = "0.11.5"
