[package]
name = "crosslog"
version = "0.1.0"
authors = ["Deathaclops <deathaclops@gmail.com>"]
description = "A library for logging and printing on both native platforms and WebAssembly."
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.26"

[features]
default = ["debug"]
debug = ["dep:console_error_panic_hook"]

[target.wasm32-unknown-unknown.dependencies]
wasm-logger = "0.2.0"
web-sys = "0.3.77"
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
env_logger = "0.11.6"

